# pkill

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/pkill-cli/: CHANGELOG.md  Cargo.toml
crates/pkill-cli/src/: lib.rs
crates/pkill-lib/: CHANGELOG.md  Cargo.toml
crates/pkill-lib/src/: error.rs  lib.rs  process.rs  result.rs
src/: cli.rs  error.rs  lib.rs  main.rs  process.rs  result.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  dirs.rs  main.rs
xtask/src/commands/: ci.rs  dist.rs  mod.rs
