[package]
name = "pkill"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[workspace.package]
description = "Simple tool to kill processes"
version = "1.0.1"
edition = "2021"
authors = ["zmrl"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zmrl010/pkill"
keywords = ["process", "kill", "terminator", "system", "utility"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dependencies]
pkill-lib = { path = "crates/pkill-lib" }
pkill-cli = { path = "crates/pkill-cli" }
anyhow = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_mangen = "0.2.3"
clap_complete = "4.0.3"
pkill-cli = { path = "crates/pkill-cli" }
