[workspace]
members = ["crates/*"]

[package]
name = "pkill"
version= "1.0.1"
description = "Simple tool to kill processes"
edition = "2021"
authors = ["zmrl"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zmrl010/pkill"
keywords = ["process", "kill", "terminator", "system", "utility"]

[dependencies]
anyhow = "1.0"
cli = { path = "crates/pkill-cli", package = "pkill-cli" }
lib = { path = "crates/pkill-lib", package = "pkill-lib" }

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_mangen = "0.2.3"
clap_complete = "4.0.3"
cli = { path = "crates/pkill-cli", package = "pkill-cli" }
