[package]
name = "pkill-cli"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
clap = { version = "4.0", features = ["derive"] }
pkill-lib = { path = "../pkill-lib" }

