[package]
name = "pkill-lib"
description = "Provides the functionality of pkill"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
sysinfo = "0.26" 
 